# TheCommons

./: .bandit  .dockerignore  .dockerignore.prod  .env.backup.before-content  .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CASCADE_DETECTOR_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONSTITUTIONAL_BLOCKING_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DELEGATION_CONCENTRATION_MONITORING_SUMMARY.md  Dockerfile  Dockerfile.prod  Dockerfile.test  LICENSE  Makefile  PROJECT_ORIGIN.md  README.md  VISION.md  alembic.ini  backup.sh  check_users.py  conftest.py  constitutional_bypass_detection.json  constitutional_concentration_monitoring.json  constitutional_coverage_enforcement.json  constitutional_drift_analysis.json  constitutional_drift_dashboard_20250817_151913.json  constitutional_drift_dashboard_20250817_153204.json  constitutional_drift_dashboard_20250817_153458.json  constitutional_logging_enforcement.json  constitutional_skip_prevention.json  constitutional_visibility_monitoring.json  create_test_user.py  debug_frontend.html  deploy-prod.sh  docker-compose.prod.yml  (+18 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
backend/: CHANGELOG.md  Makefile  __init__.py  alembic.ini  config.py  conftest.py  constitutional_awareness_monitoring.json  constitutional_diversity_enforcement.json  constitutional_drift_dashboard_20250817_145418.json  constitutional_drift_dashboard_20250817_145423.json  constitutional_drift_dashboard_20250817_145443.json  constitutional_drift_dashboard_20250817_145510.json  constitutional_drift_dashboard_20250817_145634.json  constitutional_drift_dashboard_20250817_145649.json  constitutional_feature_flag_enforcement.json  constitutional_health.json  constitutional_principle_reinforcement.json  constitutional_suppression_prevention.json  constitutional_threshold_protection.json  constitutional_todo_tracking.json  database.py  db_backup_before_reset.sql  debug_delegation.py  debug_simple.py  debug_test.py  dependencies.py  dependency_break_result.json  feasible_result.json  infeasible_result.json  init_db.py  main.py  py.typed  requirements-test.txt  requirements.txt  reset_alembic.py  seed_activity.py  setup.py  simple_test.py  (+7 more)
(+577 files in other folders)
