[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commons"
version = "1.0.0"
description = "The Commons - A Voting Platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.27",
    "aiosqlite==0.19.0",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.9",
    "bcrypt==4.1.2",
    "locust==2.15.1",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
    "python-dotenv==1.0.0",
    "asyncpg==0.29.0",
    "structlog==24.1.0"
]

[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "flake8-bugbear==24.1.17",
    "isort==5.13.2",
    "pydocstyle==6.3.0",
    "types-redis==4.6.0.20240106",
    "types-python-jose==3.3.4.0",
    "types-passlib==1.7.4.0",
    "pre-commit==3.6.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    ".env",
    ".pytest_cache"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101"
]

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D104,D107"